Fix about page conflicts free (#61)
* Refactor: about page files

* Refactor: fix images link

* Test: update snapshot

* Chore: add missing column

* Add image and block of text next to each other

* Fix partially misalignments through Aboutus

* added type script to fix CI error

* fixed tailwindconfig conflict

* prettier...

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-.root {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@layer base {
+  html {
+    font-family: 'Roboto', system-ui, sans-serif;
+  }
+}
+
+:root {
   --primary-color: #ca7560;
   --secondary-color: #c4c4c4;
   --font-color: #424242;
+  --card-background: #f0f0f0;
 }
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 @layer base {
